--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="google-site-verification" content="dxwFTpAdAACQ_3yMZuYO0LB702tqXc-5FtdWGiQ6mcY" />
 
-  <title>VII A</title>
+  <title>VIII A</title>
   <!-- HTML -->
 
   <!-- Custom Styles -->
@@ -164,7 +164,7 @@
         <ul class="dropdown-menu teks-kapital">
           <li class="dropdown-item">1. Alfisyah</li>
           <li class="dropdown-item">2. Siska</li>
-          <li class="dropdown-item">3. nirin</li>
+          <li class="dropdown-item">3. nurin</li>
           <li class="dropdown-item">4. avardo</li>
           <li class="dropdown-item">5. dwi</li>
           <li class="dropdown-item">6. evan</li>
@@ -244,7 +244,7 @@
     <h4 id="judul8" data-aos="fade-up" data-aos-duration="1000" data-aos-offset="25">Tugas</h4>
     <center>
       <div class="atur_box">
-        <div class="box_project" id="box1" data-aos="fade-up" data-aos-duration="800" data-aos-offset="25"><b>Teknik Komputer J : </b><br>
+        <div class="box_project" id="box1" data-aos="fade-up" data-aos-duration="800" data-aos-offset="25"><b>Bahasa Indonesia: </b><br>
           <img class="gambar_buku" src="indo.png" width="40px" height="53px" align="left">
           <span class="translate-middle badge rounded-pill bg-danger">0</span>
           <div class="this_week">
@@ -256,7 +256,7 @@
           <progress value="50" max="100" style="height:20px;width:100px;margin-top:5px;"></progress>
         </div>
 
-        <div class="box_project" id="box2" data-aos="fade-up" data-aos-duration="800" data-aos-offset="25"><b>bahasa Indonesia: </b>
+        <div class="box_project" id="box2" data-aos="fade-up" data-aos-duration="800" data-aos-offset="25"><b></b>matematika : </b>
           <br>
           <img class="gambar_buku" src="mtk.png" width="40px" height="53px" align="left">
           <span class="translate-middle badge rounded-pill bg-danger">0</span>
@@ -271,7 +271,7 @@
       </div>
 
       <div class="atur_box">
-        <div class="box_project" id="box3" data-aos="fade-up" data-aos-duration="800" data-aos-offset="25"><b>Matematika : </b><br>
+        <div class="box_project" id="box3" data-aos="fade-up" data-aos-duration="800" data-aos-offset="25"><b>ips : </b><br>
           <img class="gambar_buku" src="ips.png" width="40px" height="53px" align="left">
           <span class="translate-middle badge rounded-pill bg-danger">1</span>
           <div class="this_week">
@@ -283,7 +283,7 @@
           <progress value="50" max="100" style="height:20px;width:100px;margin-top:5px;"></progress>
         </div>
 
-        <div class="box_project" id="box4" data-aos="fade-up" data-aos-duration="800" data-aos-offset="25"><b>Sejarah : </b><br>
+        <div class="box_project" id="box4" data-aos="fade-up" data-aos-duration="800" data-aos-offset="25"><b>ipa : </b><br>
           <img class="gambar_buku" src="ipa.png" width="40px" height="53px" align="left">
           <span class="translate-middle badge rounded-pill bg-danger">0</span>
           <div class="this_week">
